--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,7 @@ parking_lot = "0.12"
 bytes = "1.7"
 uuid = { version = "1.10", features = ["v4", "serde"] }
 env_logger = "0.11"
+futures = "0.3"
 
 # Platform-specific dependencies
 [target.'cfg(windows)'.dependencies]
