--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,6 +71,10 @@ windows = { version = "0.58", features = [
 [target.'cfg(target_os = "macos")'.dependencies]
 core-graphics = "0.23"
 core-foundation = "0.9"
+core-video = "0.1"
+objc = "0.2"
+objc-foundation = "0.1"
+block = "0.1"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 x11rb = "0.13"
