--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,11 @@ windows = { version = "0.58", features = [
     "Win32_UI_WindowsAndMessaging",
     "Win32_System_LibraryLoader",
     "Win32_Security",
+    "Win32_Media_MediaFoundation",
+    "Win32_System_Com",
+    "Win32_System_Com_StructuredStorage",
+    "Win32_System_Variant",
+    "Win32_Media_KernelStreaming",
 ] }
 
 [target.'cfg(target_os = "macos")'.dependencies]
