--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,10 @@ env_logger = "0.11"
 futures = "0.3"
 clap = { version = "4.5", features = ["derive"] }
 
+# FFmpeg bindings for hardware encoding
+ffmpeg-next = "7.0"
+ffmpeg-sys-next = "7.0"
+
 # Platform-specific dependencies
 [target.'cfg(windows)'.dependencies]
 windows = { version = "0.58", features = [
